# Driftguard

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: driftguard.yml
.sqlx/: query-0ad604c74f88121464d95e86df78332e737efc04ff8358c792140bd9982d5871.json  query-3389dd54c90cc0542b34e6e8865ab3b883506adf78788b44de3d5380d5cbf5b8.json  query-3d58cf5e8b1eb8d053da89b75a08f41795bf73160004133bb35d14ec311b4fe9.json  query-44035355cf47edd7f071cc0c81b7e4a2a1e7a81905412bedd023f5829c2bac8f.json  query-48157c952320ba6b9a08844c8d2f77edc9a2232c9451f0c1597941fa6d3da6e0.json  query-4a037cea0fa4165bf496417aa13b69471caeaef0a142a59f92bc019016a47909.json  query-4dec5398d19b1289e6ca471009bb7f22ffc45f2f4341cb0c32a33cf7f89c8c71.json  query-58e872461ad3ab6f7f2b5f27f96a9437ac81bd5f60b7fefc2db7ad1bf0d07f0b.json  query-6d3dded55c9e7f5a8dd238e75a6b35d674dd93ad75d6576eca59be2650478db0.json  query-72263864273812a462df03418cfe3ab52d0e3b8ac1befc5c574e0df920815e64.json  query-74e5e1475b382e37398f3c8f00c36fc273c253127e3b6ff5158afc1c8536a286.json  query-793408f69ea9ac6ad387043985730d0dbf78e65d0ac02b9009acc2e33d21dc19.json  query-81d81fcaacfc1cf8a08482fa182b6695083da0110d668f36e7b37f7b7ba04864.json  query-835030aaf05b0ec6a13e42009304c10129254916f279295a243d44468f9e91e5.json  query-8827e1607cdef90ed1d80ec0a43171cb59845a5b6a2ee7df8743c5021f2f9e18.json  query-9503d43f2401252820180c5ccabc420634070f61c3b000d61758f65af0b8f0df.json  query-95e303ce35968b7af592ec9698b7b476812535ab41983e7c3198875e371fecbb.json  query-9c4561ba8cef831c4f8f8e7593a4b7d9c5c19676b07d2079998231b757e1c903.json  query-b2f45586fb0d0f887085950e3a600329670b5f260f1071ca4a812f648fb11734.json  query-b45fa50592313c36ebef86641f0096f055911c83bc6463bbe62cf8b4b3b85115.json  query-b5f484f48a614d2e1f807ebf95683cc94fb5a0eec8ee56bf9287742f85efd910.json  query-bef3fb5d2478376719da146a2cde41d9a54d8d6c03ba39c567de067d67ef5faa.json  query-c315d1bd6feabb35902ed2756217fc1c830be382b2f37ba8848ad87cc428ece5.json  query-cd07f8e3bf33612fbcdeaf2301b83d6de3485e206d58283ee8bde3bb705dbbef.json  query-d0b264c61ed78730d98abb2319331befbf465445d041700d4f2c218ef51c51ed.json  query-d2b5a6299f9b34f4075eac44c7b415e0b55f8ef7e68c6be2163be0231f02dea2.json  query-df78e1f7b1b66346624be90c3705ef63cfdda517f827f5a841cc28c47ea62e61.json  query-e5fffbc71f77bb3f45e8ac283c6025479a7669132868ea0e3af09dd318417f15.json  query-e888e8577b2efd8fed0c218c6c5d55b3362956fe716481e8364cd11136aa57cf.json
cmd/driftguard/: main.go
crates/driftguard-api/: Cargo.toml
crates/driftguard-api/src/: main.rs
crates/driftguard-cli/: Cargo.toml
crates/driftguard-cli/src/: main.rs
crates/driftguard-core/: Cargo.toml
crates/driftguard-core/examples/: gen_segment_goldens.rs  verify_ci.rs  verify_pgvector.rs  verify_selection.rs  verify_validation.rs
crates/driftguard-core/src/: ci.rs  db.rs  embed.rs  error.rs  evals.rs  fixtures.rs  lib.rs  llm.rs  models.rs  prompts.rs  scoring.rs  segment.rs  selection.rs  validation.rs
dashboard/: next.config.js  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: DiffView.tsx  EvalCases.tsx  LabelingView.tsx  RunsTable.tsx  ScoreChart.tsx
dashboard/lib/: api.ts
fixtures/: driftguard-fixtures.toml
internal/api/: server.go
internal/core/: ci.go  db.go  embed.go  embed_test.go  errors.go  evals.go  fixtures.go  json.go  llm.go  models.go  myers.go  prompts.go  prompts_write_test.go  scoring.go  segment.go  segment_test.go  selection.go  validation.go
internal/core/testdata/: segment_goldens.json
migrations/: 0001_init.sql  0002_add_embeddings.sql  0003_hand_labels.sql
tools/driftguard-llm/: go.mod  go.sum  main.go
