[package]
name = "driftguard-api"
version.workspace = true
edition.workspace = true
license.workspace = true

# Read-only HTTP API for the dashboard. It is a thin second consumer of
# driftguard-core: it calls the same read functions the CLI uses (no domain
# logic here, no write path). This is the "one source of truth, thin read API"
# boundary from the architecture.
[[bin]]
name = "driftguard-api"
path = "src/main.rs"

[dependencies]
driftguard-core = { path = "../driftguard-core" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = ["net"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = "0.3"
