[package]
name = "driftguard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

# The binary is named `driftguard` (not `driftguard-cli`) so the user-facing
# command matches the spec: `driftguard prompt create ...`.
[[bin]]
name = "driftguard"
path = "src/main.rs"

# Phase 1 is a placeholder binary, so it has no dependencies yet. Phase 2 adds
# clap (subcommand tree + global --json) and a path dependency on
# driftguard-core, at which point this becomes the thin "parse args, call core,
# format output, set exit code" layer.
[dependencies]
