[package]
name = "driftguard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

# The binary is named `driftguard` (not `driftguard-cli`) so the user-facing
# command matches the spec: `driftguard prompt create ...`.
[[bin]]
name = "driftguard"
path = "src/main.rs"

[dependencies]
driftguard-core = { path = "../driftguard-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
