[package]
name = "driftguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
similar = { workspace = true }
# HTTP client for the Voyage embeddings API (Phase 3). Async; the caller's tokio
# runtime drives it. (The Anthropic calls go through the Go sidecar, not reqwest.)
reqwest = { workspace = true }
# Fixtures file parsing (Phase 4).
toml = { workspace = true }
# Spawning the Go LLM sidecar as a subprocess (Phase 4). `process` for
# Command, `io-util` for writing the request to its stdin.
tokio = { workspace = true, features = ["process", "io-util"] }

# Dev-dependencies power the examples/ smoke test and the unit tests. They don't
# ship in the library's public dependency set.
[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
